feat: update event request section in user guide to clarify club event registration process

--- a/public/user-guide.html
+++ b/public/user-guide.html
@@ -1451,7 +1451,7 @@
         <!-- Request Overview Section -->
         <section id="request-overview" class="section">
             <h2>Overview</h2>
-            <p>The Event Request feature allows anyone to suggest events to be added to the MyPonyClub calendar. This is perfect for:</p>
+            <p>The Event Request feature allows clubs to register their planned events for the coming year. A responsible member of the club can use this form to submit events on behalf of their club. This is perfect for:</p>
 
             <div class="color-grid" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
                 <div class="color-card">
@@ -1459,8 +1459,8 @@
                         🏇
                     </div>
                     <div>
-                        <strong>Club Members</strong><br>
-                        <small>Suggest events for your club without needing manager access</small>
+                        <strong>Club Event Registration</strong><br>
+                        <small>Submit your club's planned events for the upcoming season</small>
                     </div>
                 </div>
                 <div class="color-card">
@@ -1468,8 +1468,8 @@
                         👥
                     </div>
                     <div>
-                        <strong>Community Members</strong><br>
-                        <small>Propose community events or activities</small>
+                        <strong>Club Representatives</strong><br>
+                        <small>Responsible club members can register events without needing full manager access</small>
                     </div>
                 </div>
                 <div class="color-card">
@@ -1477,8 +1477,8 @@
                         📅
                     </div>
                     <div>
-                        <strong>External Events</strong><br>
-                        <small>Share relevant equestrian events happening in the area</small>
+                        <strong>Annual Planning</strong><br>
+                        <small>Register all your club's events for the year in one go</small>
                     </div>
                 </div>
             </div>
@@ -1488,43 +1488,25 @@
             </div>
 
             <h3>How It Works</h3>
-            <div style="display: flex; flex-direction: column; gap: 1rem;">
-                <div style="position: relative;">
-                    <div style="display: flex; gap: 1rem; align-items: center; margin-bottom: 0.5rem;">
-                        <div style="width: 40px; height: 40px; background: #3b82f6; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; flex-shrink: 0;">1</div>
-                        <h4 style="margin: 0;">Fill Out the Form</h4>
-                    </div>
-                    <p style="margin-left: 56px;">Complete the embedded request form with event details (name, date, location, description, etc.)</p>
+            <div class="workflow-steps">
+                <div class="workflow-step">
+                    <h4>Fill Out the Form</h4>
+                    <p>Complete the embedded request form with event details (name, date, location, description, etc.)</p>
                 </div>
 
-                <div style="text-align: center; font-size: 2rem; color: #9ca3af; margin: -0.5rem 0;">↓</div>
-
-                <div style="position: relative;">
-                    <div style="display: flex; gap: 1rem; align-items: center; margin-bottom: 0.5rem;">
-                        <div style="width: 40px; height: 40px; background: #10b981; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; flex-shrink: 0;">2</div>
-                        <h4 style="margin: 0;">Submit Request</h4>
-                    </div>
-                    <p style="margin-left: 56px;">Click submit and your request is sent to the system administrators</p>
+                <div class="workflow-step">
+                    <h4>Submit Request</h4>
+                    <p>Click submit and your request is sent to the system administrators</p>
                 </div>
 
-                <div style="text-align: center; font-size: 2rem; color: #9ca3af; margin: -0.5rem 0;">↓</div>
-
-                <div style="position: relative;">
-                    <div style="display: flex; gap: 1rem; align-items: center; margin-bottom: 0.5rem;">
-                        <div style="width: 40px; height: 40px; background: #f59e0b; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; flex-shrink: 0;">3</div>
-                        <h4 style="margin: 0;">Admin Review</h4>
-                    </div>
-                    <p style="margin-left: 56px;">Administrators review your request and decide whether to add it to the calendar</p>
+                <div class="workflow-step">
+                    <h4>Admin Review</h4>
+                    <p>Administrators review your request and decide whether to add it to the calendar</p>
                 </div>
 
-                <div style="text-align: center; font-size: 2rem; color: #9ca3af; margin: -0.5rem 0;">↓</div>
-
-                <div style="position: relative;">
-                    <div style="display: flex; gap: 1rem; align-items: center; margin-bottom: 0.5rem;">
-                        <div style="width: 40px; height: 40px; background: #8b5cf6; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; flex-shrink: 0;">4</div>
-                        <h4 style="margin: 0;">Email Notification</h4>
-                    </div>
-                    <p style="margin-left: 56px;">You'll receive an email confirming your submission (make sure to provide a valid email address)</p>
+                <div class="workflow-step">
+                    <h4>Email Notification</h4>
+                    <p>You'll receive an email confirming your submission (make sure to provide a valid email address)</p>
                 </div>
             </div>
         </section>
